2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* server.c (struct fault_info): New structure.
	(page_fault): New function.
	(server_loop): Implement page fault handling in terms of the new
	function.  When copying a capability that makes a page available
	in the caller's hardware address space, map it preemptively.  When
	clearing a discarded bit for a page that appears in the caller's
	hardware address space, allocate the object and map it
	preemptively.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* list.h (list_queue): Rename from this...
	(list_enqueue): ... to this.  Update users.
	(list_dequeue): New function.
	(LIST_CLASS): Rename the generated queue function accordingly and
	update users.  Generate a stub for dequeueing elements.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* pager.c (reclaim_from): Add victims to the end of the eviction
	list.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Add frames to the end of the active or
	inactive list, not the head.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_desc_claim): Fix typo.

2008-11-04  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Replace fields active, inactive,
	priorities and priorities_count with fields frames_ and frames.
	Update users.
	* object.h (activity_lru): Rename from this...
	(activity): ... to this.  Update users.
	* activity.c (activity_destroy): When moving frames claimed by a
	child to its parent's lowest priority level, update each frame's
	respective priority.
	(activity_prepare) [! NDEBUG]: Initialize priority levels.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (main): Use s_printf, not debug, to print the
	unpatched warning.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty viengoos/libhurd-cap.a.

2008-10-08  Neal H. Walfield  <neal@gnu.org>

	* rm.h (enum rm_method_id): Add RM_read.
	(rm_method_id_string): Handle it.
	(read): New RPC.